# windsurf-project-2

./: .gitignore  AVAILABLE_SCENARIOS.md  FIXED_ISSUES.md  NOISIEST_PLANT_FIX.md  README.md  README_COMPREHENSIVE.md  README_FRONTEND.md  WIZARD_GUIDE.md  backend_server.py  extract_plants.py  extract_scenarios.py  extract_wizard_data.py  extract_workbook_logic.py  pyproject.toml  start_app.sh  test_app.sh  test_calculator.py  test_calculator_comprehensive.py  update_calculator_concawe.py  workbook_analysis.json  workbook_mapper.py
datasets/: concawe_propagation.json
datasets/20240101_000000_abc123de/: dataset.json
docs/: workbook_logic.json  workbook_map.json  workbook_map.md
frontend/: package-lock.json  package.json
frontend/public/: plants.json  scenarios.json  wizard-data.json
frontend/src/app/: page.tsx
frontend/src/app/api/calculate/: route.ts
frontend/src/components/: ComprehensiveResults.tsx  NoiseCalculatorForm.tsx  NoiseWizard.tsx
frontend/src/types/: estimator.ts
noise_estimator/: __init__.py
noise_estimator/api/: __init__.py  main.py
noise_estimator/cli/: __init__.py  main.py
noise_estimator/core/: __init__.py  calculator.py  dataset.py
noise_estimator/extract/: __init__.py  dataset_extractor.py
noise_estimator/models/: schemas.py
noise_estimator/utils/: __init__.py  audit.py
tests/: conftest.py
tests/regression/: test_worked_examples.py
tests/unit/: test_calculator.py
